--- a/_config.yml
+++ b/_config.yml
@@ -6,32 +6,31 @@ repository: Git repository where your resume will be hosted, only required if yo
 version: 2
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
+name: Isabel Omness
+title: Personal Banking Representative 1
+email: omnessis@msu.edu
 # email_title: Email (Email title override)
-phone: Your phone number (optional)
+phone: 111-111-1111
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
+# website: Your website (eg. https://google.com)(optional)
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-twitter_username: jekyllrb
-github_username:  jekyll
-stackoverflow_username: "00000001"
-dribbble_username: jekyll
-facebook_username: jekyll
-flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
-xing_username: jekyll
-pinterest_username: jekyll
-youtube_username: jekyll
-orcid_username: 0000-0000-0000-0000
-googlescholar_username: D847cGsAAAAJ
+twitter_username: faketwittername
+github_username:  omnessis
+stackoverflow_username: "fakename.isabel"
+facebook_username: isabel.omness
+# flickr_username: jekyll
+instagram_username: fake.instaname.isabel
+linkedin_username: Isabel Omness
+#xing_username: jekyll
+#pinterest_username: jekyll
+#youtube_username: jekyll
+#orcid_username: 0000-0000-0000-0000
+#googlescholar_username: D847cGsAAAAJ
 
 # Additional icon links
 additional_links:
