--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ linkedin_username: Isabel Omness
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: images/profpic.png
 about_content: | # this will include new lines to allow paragraphs
   I'm from Shelby, Michigan and currently pursuing my degree with the goal of becoming an actuary. 
     I love spending time outdoors, playing soccer, and being with my family. 
